Fix top spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
     text-align: center;
-    padding: 5%;
+    padding: 2%;
     background-color: rgb(240, 253, 255);
     color: rgb(51, 75, 75);
 }
